# Decodius

./: .gitattributes  .gitignore  ANNUNCIO.md  Assistant.cpp  Assistant.h  AudioAnalyzer.cpp  AudioAnalyzer.h  BUILD_MAC.md  BUILD_RASPBERRY.md  CMakeLists.txt  ConfigPaths.cpp  ConfigPaths.h  DecodiumConfig.cpp  DecodiumConfig.h  Decodius.html  Fft.h  LEGGIMI-Decodium.txt  LEGGIMI.txt  Main.qml  OllamaClient.cpp  OllamaClient.h  PiperTts.cpp  PiperTts.h  README.md  Spectrum.h  WhisperStt.cpp  WhisperStt.h  XttsTts.cpp  XttsTts.h  _build.bat  _build_inc.bat  build_decodius.bat  decodius.iss  decodius.rc  decodius_ham_kb.md  decodius_system.txt  install_chatter.ps1  main.cpp  make_icon.py  make_pyedge.ps1  (+6 more)
.github/workflows/: decodius-release.yml  release.yml
docs/release-notes/: v1.5.md
edge/: edge_server.py
